{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 199,
  "lineage": "9d7183ff-4f0d-6624-3470-dd4c281bff6a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04a37924ffe27da53",
            "arn": "arn:aws:ec2:ap-south-1:024848476452:instance/i-0f5b9a87304877a7e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "bastion-profile",
            "id": "i-0f5b9a87304877a7e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ganga",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05508c401934a31ce",
            "private_dns": "ip-10-0-0-136.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.136",
            "public_dns": "ec2-13-233-110-129.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.110.129",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c7fa77c19006ab6b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02b48f48e3cb0d9cd",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07d1a070206d2008c"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.bastion_profile",
            "aws_iam_role.bastion_role",
            "aws_internet_gateway.igw",
            "aws_route.public_internet_access",
            "aws_route_table.public",
            "aws_security_group.main",
            "aws_subnet.public_subnet",
            "aws_vpc.main1",
            "data.aws_ami.linux",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04a37924ffe27da53",
            "arn": "arn:aws:ec2:ap-south-1:024848476452:instance/i-0fc7bbe48ec538b13",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "bastion-profile",
            "id": "i-0fc7bbe48ec538b13",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ganga",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06ff645d8c763abc9",
            "private_dns": "ip-10-0-1-106.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.106",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06234dc24759bd251",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-033163c9a9c76a896",
            "tags": {
              "Contact": "tgangabhavani2003@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-private-ec2",
              "Project": "devops-102"
            },
            "tags_all": {
              "Contact": "tgangabhavani2003@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-private-ec2",
              "Project": "devops-102"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07d1a070206d2008c"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.bastion_profile",
            "aws_iam_role.bastion_role",
            "aws_security_group.main",
            "aws_subnet.private_subnet",
            "aws_vpc.main1",
            "data.aws_ami.linux",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:024848476452:internet-gateway/igw-075ccf0822d442dd6",
            "id": "igw-075ccf0822d442dd6",
            "owner_id": "024848476452",
            "tags": {
              "Contact": "tgangabhavani2003@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-gateway",
              "Project": "devops-102"
            },
            "tags_all": {
              "Contact": "tgangabhavani2003@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-gateway",
              "Project": "devops-102"
            },
            "vpc_id": "vpc-04d016ab11ca1d846"
          },
          "dependencies": [
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-075ccf0822d442dd6",
            "id": "r-rtb-0c417fe2b3b5fbc001080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c417fe2b3b5fbc00",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:024848476452:route-table/rtb-06baa993cd01fc002",
            "id": "rtb-06baa993cd01fc002",
            "owner_id": "024848476452",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Contact": "tgangabhavani2003@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-private",
              "Project": "devops-102"
            },
            "tags_all": {
              "Contact": "tgangabhavani2003@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-private",
              "Project": "devops-102"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d016ab11ca1d846"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:024848476452:route-table/rtb-0c417fe2b3b5fbc00",
            "id": "rtb-0c417fe2b3b5fbc00",
            "owner_id": "024848476452",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Contact": "tgangabhavani2003@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-public",
              "Project": "devops-102"
            },
            "tags_all": {
              "Contact": "tgangabhavani2003@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-public",
              "Project": "devops-102"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d016ab11ca1d846"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a4a289127d3e2cd7",
            "route_table_id": "rtb-06baa993cd01fc002",
            "subnet_id": "subnet-033163c9a9c76a896"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_subnet",
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b7afab9ff178dfc3",
            "route_table_id": "rtb-0c417fe2b3b5fbc00",
            "subnet_id": "subnet-02b48f48e3cb0d9cd"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_subnet",
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:024848476452:security-group/sg-07d1a070206d2008c",
            "description": "allow ssh to ec2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-07d1a070206d2008c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "main-ssh_bastion",
            "name_prefix": "",
            "owner_id": "024848476452",
            "revoke_rules_on_delete": false,
            "tags": {
              "Contact": "tgangabhavani2003@gmail.com",
              "Managed_by": "Terraform",
              "Project": "devops-102"
            },
            "tags_all": {
              "Contact": "tgangabhavani2003@gmail.com",
              "Managed_by": "Terraform",
              "Project": "devops-102"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d016ab11ca1d846"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:024848476452:subnet/subnet-033163c9a9c76a896",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-033163c9a9c76a896",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "024848476452",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-04d016ab11ca1d846"
          },
          "dependencies": [
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:024848476452:subnet/subnet-02b48f48e3cb0d9cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02b48f48e3cb0d9cd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "024848476452",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Contact": "tgangabhavani2003@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-public",
              "Project": "devops-102"
            },
            "tags_all": {
              "Contact": "tgangabhavani2003@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-public",
              "Project": "devops-102"
            },
            "vpc_id": "vpc-04d016ab11ca1d846"
          },
          "dependencies": [
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:024848476452:vpc/vpc-04d016ab11ca1d846",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-019b86c4a2b936f45",
            "default_route_table_id": "rtb-0f32ccd34f499de00",
            "default_security_group_id": "sg-0a842a7b94a5e6cce",
            "dhcp_options_id": "dopt-059cf55319d718001",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04d016ab11ca1d846",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f32ccd34f499de00",
            "owner_id": "024848476452",
            "tags": {
              "Contact": "tgangabhavani2003@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-vpc",
              "Project": "devops-102"
            },
            "tags_all": {
              "Contact": "tgangabhavani2003@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-vpc",
              "Project": "devops-102"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "vpc_gateway_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:024848476452:vpc-endpoint/vpce-0770f99f29e502526",
            "cidr_blocks": [
              "52.219.156.0/22",
              "52.219.160.0/23",
              "52.219.62.0/23",
              "3.5.212.0/23",
              "3.5.208.0/22",
              "16.12.40.0/23",
              "52.219.64.0/22",
              "16.12.36.0/22"
            ],
            "id": "vpce-0770f99f29e502526",
            "owner_id": "024848476452",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-78a54011",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-06baa993cd01fc002"
            ],
            "service_name": "com.amazonaws.ap-south-1.s3",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-04d016ab11ca1d846"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_vpc.main1"
          ]
        }
      ]
    }
  ]
}